# yt-downloader

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MEMORY.md  README.md  SUBTASKS.md  mise.toml  pyproject.toml  skills-lock.json  yt-downloader.spec
.github/hooks/: serena-hooks.json
.github/workflows/: codeql.yml  pr-check.yml  release.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  memory_maintenance.md  suggested_commands.md  task_completion.md  tech_stack.md
scripts/: generate_build_info.py
src/yt_downloader/: __main__.py  _version.py  errors.py  gui.py
src/yt_downloader/services/: __init__.py  audio.py  base.py  subtitle.py  video.py
tests/: test_audio_service.py  test_cli_parse_errors.py  test_cli_parse_success.py  test_cli_service_dispatch.py  test_subtitle_service.py  test_video_service.py
