[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "yt-downloader"
version = "0.1.0"
description = "YouTube downloader CLI"
readme = "README.md"
requires-python = ">=3.14"

[project.scripts]
yt-downloader = "yt_downloader.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.13",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
