[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "yt-downloader"
dynamic = ["version"]
description = "YouTube downloader"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nicegui[native]>=3.12.1",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
yt-downloader = "yt_downloader.__main__:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "ty>=0.0.40",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
